Add link, fix typo

--- a/java/jhm/README.adoc
+++ b/java/jhm/README.adoc
@@ -1,4 +1,4 @@
-= JHM code snipperts
+= JHM code snippets
 
 == Print assembly
 If `java -XX:+UnlockDiagnosticVMOptions -XX:+PrintAssembly -version` fails,
@@ -25,3 +25,4 @@ java -XX:+UnlockDiagnosticVMOptions -XX:+PrintAssembly -version
 === Links
 
 * https://wiki.openjdk.java.net/display/HotSpot/PrintAssembly
+* https://stackoverflow.com/questions/9337670/hotspot7-hsdis-printassembly-intel-syntax
